--- a/css/mine.css
+++ b/css/mine.css
@@ -81,10 +81,15 @@
   font-family: Caveat;
 }
 
+figure {
+  margin: 0;
+}
+
 .img-one {
   position: absolute;
   top: 10px;
   left: 100px;
+  display: inline-block;
   -webkit-transform: scale(1);
           transform: scale(1);
   -webkit-transition: -webkit-transform 250ms linear;
